emulation: Allow the terminal application to consume right button click events

This is necessary for gnome-terminal to deliver a right click to applications
which are interested in mouse events, and pop up the menu otherwise.

https://bugzilla.gnome.org/show_bug.cgi?id=13299